module(
    name = "rules_webtesting_web_go",
    version = "0.4.0",
)

bazel_dep(
    name = "rules_webtesting",
)

local_path_override(
    module_name = "rules_webtesting",
    path = "../..",
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)

bazel_dep(
    name = "rules_jvm_external",
    version = "6.6",
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    artifacts = [
        "com.google.guava:guava:33.2.1-jre",
        "org.seleniumhq.selenium:selenium-remote-driver:4.27.0",
        "org.seleniumhq.selenium:selenium-api:4.27.0",
        "junit:junit:4.13.2",
    ],
)

use_repo(maven, "maven")

##### Go dependencies #####
bazel_dep(
    name = "rules_go",
    version = "0.51.0-rc1",
    repo_name = "io_bazel_rules_go",
)

bazel_dep(
    name = "gazelle",
    version = "0.40.0",
    repo_name = "bazel_gazelle",
)

go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")

go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_github_gorilla_mux",
    "com_github_tebeka_selenium",
)
