# Copyright 2018 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
################################################################################
#
load("@rules_webtesting_web_scala//scala:scala.bzl", "scala_web_test_suite")

licenses(["notice"])  # Apache 2.0

scala_web_test_suite(
    name = "WebTestTest",
    srcs = ["WebTestTest.scala"],
    browsers = [
        "@rules_webtesting//browsers:chromium-local",
        "@rules_webtesting//browsers:firefox-local",
        "@rules_webtesting//browsers/sauce:chrome-win10",
        "@rules_webtesting//browsers/sauce:chrome-win10-connect",
    ],
    deps = [
        "@maven//:junit_junit",
        "@maven//:org_seleniumhq_selenium_selenium_api",
        "@rules_webtesting//java/com/google/testing/web",
    ],
)
