# Copyright 2017 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
################################################################################
#
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("//web/internal:executable_name.bzl", "get_platform_executable_name")

licenses(["notice"])  # Apache 2.0

go_library(
    name = "go_default_library",
    srcs = ["merger.go"],
    importpath = "github.com/bazelbuild/rules_webtesting/go/metadata/main",
    visibility = ["//go:__subpackages__"],
    deps = ["//go/metadata:go_default_library"],
)

go_binary(
    name = "main",
    testonly = True,
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    out = get_platform_executable_name(),
)

sh_test(
    name = "merger_test",
    srcs = ["merger_test.sh"],
    data = [
        "@bazel_tools//tools/bash/runfiles",
        "//testdata",
        ":main",
    ],
    # Pass the executable path so that the test can resolve the merger
    # entry-point in a platform-agnostic way.
    args = ["$(rootpath :main)"],
    tags = ["noci"],

)
