# Copyright 2016 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
################################################################################
#
load("//web:py.bzl", "py_web_test_suite")
load("@rules_python//python:defs.bzl", "py_library")

licenses(["notice"])  # Apache 2.0

py_library(
    name = "web",
    testonly = True,
    srcs = glob(
        ["*.py"],
        exclude = ["*_test.py"],
    ),
    visibility = ["//visibility:public"],
    deps = [
        "@rules_webtesting_py_deps//selenium",
    ],
)

py_web_test_suite(
    name = "webtest_test",
    srcs = ["webtest_test.py"],
    browsers = [
        "@rules_webtesting//browsers:chromium-local",
        "@rules_webtesting//browsers:firefox-local",
        "@rules_webtesting//browsers/sauce:chrome-win10",
        "@rules_webtesting//browsers/sauce:chrome-win10-connect",
    ],
    tags = {
        "chromium-local": [
            "native",
        ],
        "chrome-win10": [
            "exclusive",
            "sauce",
            "notravis",
        ],
        "chrome-win10-connect": [
            "exclusive",
            "noci",
            "sauce",
        ],
        "firefox-local": [
            "native",
        ],
    },
    deps = [":web"],
)
