# Copyright 2017 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
################################################################################
#
package(default_testonly = True)

load("@io_bazel_rules_go//go:def.bzl", "go_library")

licenses(["notice"])  # Apache 2.0

go_library(
    name = "go_default_library",
    srcs = [
        "driver_hub.go",
        "driver_responses.go",
        "driver_session.go",
    ],
    importpath = "github.com/bazelbuild/rules_webtesting/go/launcher/proxy/driverhub",
    visibility = ["//visibility:public"],
    deps = [
        "//go/httphelper:go_default_library",
        "//go/launcher/diagnostics:go_default_library",
        "//go/launcher/environment:go_default_library",
        "//go/launcher/errors:go_default_library",
        "//go/launcher/healthreporter:go_default_library",
        "//go/launcher/proxy:go_default_library",
        "//go/launcher/proxy/driverhub/debugger:go_default_library",
        "//go/launcher/webdriver:go_default_library",
        "//go/metadata:go_default_library",
        "//go/metadata/capabilities:go_default_library",
        "@com_github_gorilla_mux//:go_default_library",
    ],
)
